# CameraSoftware

./: .clang-format  CMakeLists.txt  ReadMe.md  main.cpp  window.cpp  window.h
doc/: Software explanation v 1.1.docx
images/: ReadMe.txt
src/: camera.cpp  camera.h  camera_record.cpp  camera_record.h  camera_widget.cpp  camera_widget.h  keep_ratio_widget.cpp  keep_ratio_widget.h  static_resource.cpp  static_resource.h
src/ui/: joystick_button.cpp  joystick_button.h  sidebar_widget.cpp  sidebar_widget.h
